--- a/index.html
+++ b/index.html
@@ -120,5 +120,11 @@
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="script.js?v=10"></script>
 
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+<script src="script.js?v=11"></script>
+
+
 </body>
 </html>
+
