--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="factor-list"></div>
       </div>
 
-      <div class="bucket" id="bucket-demo">
+      <div class="bucket" id="bucket-demographics">
         <h3>Demographics</h3>
         <div class="factor-list"></div>
       </div>
@@ -125,6 +125,7 @@
 
 </body>
 </html>
+
 
 
 
