Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -101,10 +101,7 @@
   </div>
 
   <div id="container">
-    <!-- LEFT SIDEBAR -->
-    <div id="sidebar-left">
-      ... (your existing left sidebar code stays unchanged)
-    </div>
+    <!-- LEFT SIDEBAR --> <div id="sidebar-left"> <h2>Factors</h2> <p class="hint"> These are variables that show up as a top contributor for at least one U.S. county.<br> Click a factor to highlight where it matters. </p> <div class="bucket" id="bucket-environmental"> <h3>Environmental</h3> <div class="factor-list"></div> </div> <div class="bucket" id="bucket-health"> <h3>Health</h3> <div class="factor-list"></div> </div> <div class="bucket" id="bucket-income"> <h3>Income & Socioeconomic</h3> <div class="factor-list"></div> </div> <div class="bucket" id="bucket-demo"> <h3>Demographics</h3> <div class="factor-list"></div> </div> <div class="bucket" id="bucket-other"> <h3>Other</h3> <div class="factor-list"></div> </div> </div>
 
     <!-- MAP -->
     <div id="map"></div>
@@ -118,6 +115,7 @@
 
 </body>
 </html>
+
 
 
 
