Revise sidebar feature descriptions in index.html
Updated feature descriptions in the left and right sidebars to clarify functionality.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <!-- LEFT SIDEBAR -->
     <div id="sidebar-left">
-      <h2>Factors</h2>
+      <h2>Feature 1: Factor wise county visualization</h2>
       <p class="hint">
         These are variables that show up as a top contributor for at least one U.S. county.<br>
         Click a factor to highlight where it matters.
@@ -145,7 +145,10 @@
 
     <!-- RIGHT SIDEBAR -->
     <div id="sidebar-right">
-      <h2 id="county-title">Click a county</h2>
+      <h2 id="county-title">Feature 2: County wise results</h2>
+      <p class="hint">
+        Click a county to see the top factors contributing to it. The value in the bracket is the contrbution of that factors in the overall regression equation. A positive factor means the factor increased the life expectancy and vice-verse.
+      </p>
       <div id="county-details"></div>
     </div>
 
@@ -158,3 +161,4 @@
 
 </body>
 </html>
+
