--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <!-- RIGHT SIDEBAR -->
     <div id="sidebar-right">
       <h2 id="county-title">Feature 2: County wise results</h2>
-      <p class="hint">
+      <p id="county-intro">
         Click a county to see the top factors contributing to it. The value in the bracket is the contrbution of that factors in the overall regression equation. A positive factor means the factor increased the life expectancy and vice-verse.
       </p>
       <div id="county-details"></div>
@@ -206,6 +206,7 @@
 
 </body>
 </html>
+
 
 
 
