Refine page description and content clarity
Updated page description and improved text clarity.

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
   <div id="page-header">
     <h1>Page Description</h1>
     <p>
-      Hi and welcome to my page! This page helps you visualize the factors that influence life expectancy across various US counties.
+      Hi and welcome to my page! This page helps you visualize the factors that influence life expectancy across various US counties. The values obtained for these visualizatio was through a linear regression model. 
       The counties considered for this visualization are the ones for which the average mean error was <=1 years which were about half
-      the counties (1500 out of 3000). There are two features - feature 1 helps you narrow down on counties based on a specific
-      contributing factor. Feature 2 helps you visualize the factors contributing to a particular county.
+      the counties (~ 1500 out of 3000). There are two features - feature 1 helps you narrow down on counties based on a specific
+      contributing factor and feature 2 helps you visualize the factors contributing to a particular county.
     </p>
   </div>
 
@@ -192,7 +192,7 @@
     <div id="sidebar-right">
       <h2 id="county-title">Feature 2: County wise results</h2>
       <p id="county-intro">
-        Click a county to see the top factors contributing to it. The value in the bracket is the contrbution of that factors in the overall regression equation. A positive factor means the factor increased the life expectancy and vice-verse.
+        Click a county to see the top factors contributing to it. The value in the bracket is the contrbution of that factors in the overall regression equation.
       </p>
       <div id="county-details"></div>
     </div>
@@ -206,6 +206,7 @@
 
 </body>
 </html>
+
 
 
 
