Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <div id="page-header">
     <h1>Page Description</h1>
     <p>
-      Hi and welcome to my page! This page helps you visualize the factors that influence life expectancy across various US counties. The values obtained for these visualizatio was through a linear regression model. 
+      Hi and welcome to my page! This page helps you visualize the factors that influence life expectancy across various US counties. The values obtained for this visualization was through a linear regression model. 
       The counties considered for this visualization are the ones for which the average mean error was <=1 years which were about half
       the counties (~ 1500 out of 3000). There are two features - feature 1 helps you narrow down on counties based on a specific
       contributing factor and feature 2 helps you visualize the factors contributing to a particular county.
@@ -206,6 +206,7 @@
 
 </body>
 </html>
+
 
 
 
